--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test",
+    "deploy-local": "npx hardhat run scripts/deploy.js",
+    "deploy-goerli": "npx hardhat run scripts/deploy.js --network goerli"
   },
   "author": "",
   "license": "ISC",
