--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "deploy-local": "npx hardhat run scripts/deploy.js",
-    "deploy-goerli": "npx hardhat run scripts/deploy.js --network goerli"
+    "deploy-local": "npx hardhat run scripts/deploy.ts --network local",
+    "deploy-goerli": "npx hardhat run scripts/deploy.ts --network goerli"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.1"
+    "hardhat": "^2.10.1",
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "chai": "^4.2.0",
+    "ethers": "^5.4.7",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21"
   },
   "dependencies": {
     "dotenv": "^16.0.1"
